compiler/gw-bootstrap/crates/gw_parse/tests/snapshots/corpus__pass_corpus@034_logand.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:8
      LParen `(` @1:5..1:6
      RParen `)` @1:6..1:7
    RetType @1:8..1:14
      Arrow `->` @1:8..1:10
      PathType @1:11..1:14
        Ident `u0` @1:11..1:13
    Block @1:14..2:1
      LBrace `{` @1:14..1:15
      LetStmt @1:16..1:39
        KwLet `let` @1:16..1:19
        WildcardPat @1:20..1:22
          Ident `_` @1:20..1:21
        Eq `=` @1:22..1:23
        BinaryExpr @1:24..1:37
          LiteralExpr @1:24..1:29
            KwTrue `true` @1:24..1:28
          AmpAmp `&&` @1:29..1:31
          LiteralExpr @1:32..1:37
            KwFalse `false` @1:32..1:37
        Semi `;` @1:37..1:38
      RBrace `}` @1:39..1:40
